# arbitrage_full

./: .gitignore  CLOUDFLARE_DEPLOYMENT.md  PERPETUAL_FUTURES_IMPLEMENTATION.md  README.md  START.md  TRADING_STRATEGY.md  docker-compose.yml
backend/: .dockerignore  .env.example  Dockerfile  add_test_user.py  arbitrage.db  check_mon_prices.py  check_upbit_mon.py  create_user.py  debug_mon_opps.py  fetch_exchange_symbols.py  pyproject.toml  requirements.txt  setup.cfg  test_auto_trading.py  test_execution.py  test_kimchi.py  update_password.py
backend/app/: main.py
backend/app/api/: auth_routes.py  autotrading_routes.py  execution_routes.py  portfolio_routes.py  positions_routes.py  routes.py  wallet_routes.py
backend/app/auth/: __init__.py  dependencies.py  encryption.py  jwt.py  password.py
backend/app/connectors/: base.py  base_perp.py  binance_perp.py  binance_spot.py  bithumb_spot.py  bybit_perp.py  ccxt_spot.py  deposit_status.py  edgex_perp.py  fx_rates.py  hyperliquid_perp.py  lighter_perp.py  okx_spot.py  perp_base.py  simulated.py  upbit_spot.py
backend/app/core/: config.py
backend/app/db/: __init__.py  base.py  init_db.py  session.py
backend/app/models/: db_models.py  market_data.py  opportunity.py
backend/app/services/: auto_trader.py  exchange_client.py  fill_monitor.py  opportunity_engine.py  order_executor.py  portfolio.py  position_closer.py  position_monitor.py
backend/arbitrage_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
docs/: architecture.md
frontend/: .env.example  deploy-cloudflare.sh  index.html  package-lock.json  package.json  tailwind.config.js
frontend/public/: _headers  _redirects  clear-sw.html
frontend/src/: App.css  App.tsx  ErrorBoundary.tsx  LoginModal.css  LoginModal.tsx  api.ts  auth.ts  config.ts  index.css  types.ts
frontend/src/hooks/: useOpportunities.ts  usePositions.ts
monitor/: README.md  package-lock.json  package.json
monitor/src/app/: globals.css  layout.tsx  page.tsx
monitor/src/lib/: binance.ts  bingx.ts  bitget.ts  bybit.ts  (+6 more)
(+4 files in other folders)
